fixed responsiveness on blog page + fixed dark mode on pricing page

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -39,6 +39,17 @@ footer {
 .footer-links {
   float: right;
 }
+.blog-post-list {
+  list-style: none;
+}
+.blog-link {
+  text-align: left;
+  display: inline;
+  text-decoration: none;
+}
+.blog-date {
+  float: right;
+}
 @media (prefers-color-scheme: dark){
   body {color:#fff;background:#2b2d2f;}
   title {color:white;}
@@ -57,6 +68,8 @@ footer {
   footer {font-size: .75rem;}
   .copyright {float: left; padding-bottom: .3rem;}
   .footer-links {float: left; clear: both; padding-bottom: 2rem;}
+  .blog-link {margin-left: -2rem; float: none; text-decoration: underline; display:block;}
+  .blog-date {margin-left: -2rem; float: none; display: block; margin-bottom: 1.2rem;}
 }
 
 .nav-links {
@@ -77,14 +90,8 @@ footer {
 .content {
   margin-top:-20px;
 }
-.blog-link {
-  text-align: left;
-  display: inline;
-  text-decoration: none;
-}
-.blog-date {
-  float: right;
-}
+
+
 @counter-style repeating-emoji {
   system: cyclic;
   symbols: "👨‍✈️" "💰" "📈" "🤔" "💸";
@@ -93,4 +100,5 @@ footer {
 .repeating-counter-rule {
   list-style-type: repeating-emoji;
 }
+
  
