--- a/src/components/pricing.module.css
+++ b/src/components/pricing.module.css
@@ -64,6 +64,7 @@ h2 {
     text-align: center;
     margin-top: 1em;
     margin-bottom: 0.5rem;
+    color: black;
 }
 .price {
     margin-top: 0px;
@@ -71,6 +72,7 @@ h2 {
     font-size: 2em;
     font-weight: 700;
     text-align: center;
+    color: black;
 }
 .per-month {
     float: none;
@@ -79,12 +81,14 @@ h2 {
     font-weight: 400;
     -o-object-fit: fill;
     object-fit: fill;
+    color: black;
 }
 .plus-ad-spend {
     margin-top: 0px;
     padding-top: 5px;
     font-size: 11px;
     text-align: center;
+    color: black;
 }
 .features-list {
     border-top: 1px solid #000;
@@ -93,6 +97,7 @@ h2 {
     font-size: 0.8em;
     padding: 15px 15% 10px 27%;
     border-radius: 0px;
+    color: black;
 }
 .feature {
     margin-bottom: 1em;
@@ -106,6 +111,7 @@ h2 {
     font-style: normal;
     text-align: center;
     font-family:Arial, Helvetica, sans-serif;
+    color: black; 
 }
 .why-minimum {
     display: block;
@@ -114,6 +120,7 @@ h2 {
     padding-right: 0px;
     font-size: 0.85em;
     text-align: right;
+    color: black; 
 }
 @media screen and (max-width:700px) {
     .pricing-container {
